--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   </head>
 
   <body>
+    <div id="hideDevice">
+      <h2>Sorry!</h2>
+      <p>Not Display on phone please open on laptop or pc</p>
+    </div>
     <div class="wrapper">
       <div class="cover cover-left"></div>
       <div class="cover cover-right"></div>
